...
      appLogger.e('Error saving language', error: e);
      rethrow;
    }
  }

  String get loginButtonText =>
      state.currentLanguage == 'ru' ? 'ВОЙТИ' : 'LOGIN';
  String get registerButtonText =>
      state.currentLanguage == 'ru' ? 'СОЗДАТЬ АККАУНТ' : 'CREATE ACCOUNT';
  String get loginTabText => state.currentLanguage == 'ru' ? 'Вход' : 'Login';
  String get registerTabText =>
      state.currentLanguage == 'ru' ? 'Регистрация' : 'Register';
  String get emailLabel => 'Email';
...
